fix: remove spacing from rows

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -2,7 +2,6 @@
 .row {
   display: flex;
   column-gap: 1rem;
-  justify-content: space-between;
 }
 .col {
   @include col;
